--- a/src/main/resources/fia_at.cfg
+++ b/src/main/resources/fia_at.cfg
@@ -2,4 +2,4 @@
 # protected net.minecraft.client.renderer.texture.TextureAtlasSprite field_110982_k # animationMetadata
 public net.minecraft.client.gui.inventory.GuiContainer field_147003_i #guiLeft
 public net.minecraft.client.gui.inventory.GuiContainer field_147009_r #guiTop
-public net.minecraft.client.gui.inventory.GuiContainer.func_146981_a #isMouseOverSlot
+public net.minecraft.client.gui.inventory.GuiContainer func_146981_a #isMouseOverSlot
